--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
         android:theme="@style/Theme.Project_game"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <service
+            android:name=".music"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity
             android:name=".start_game"
             android:exported="false">
